@@ -1,4 +1,4 @@
-.TH CENTERICQ 1 "September 23, 2002"
+.TH CENTERICQ 1 "January 18, 2003"
 
 .SH NAME
 \fBcentericq\fP \- a text mode based IM client for Linux, *BSD and possibly,
