@@ -1386,6 +1386,10 @@ contact list. You can bind the host(1) command for ICQ contacts to
 comfortably lookup their domain names, for instance. More info in the
 README chapter 9.3.6.
 
+The external actions definitions file format was extended with the
+new "nowait" option which makes centericq not to wait the action
+code to finish.
+
 The Jabber module was modified so that now it treats correctly all the
 data encoded in UTF-8, including nicknames in roster, user information,
 and so on.
@@ -1397,4 +1401,3 @@ Shells others than /bin/sh didn't work in external actions. Fixed.
 
 In the adding to visible/invisible list selection box contacts that are
 already on the list are not shown anymore.
-
